--- a/filemanager-0.5/gradle/wrapper/gradle-wrapper.properties
+++ b/filemanager-0.5/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,6 @@
-#Fri Dec 12 20:10:44 GMT 2014
+android.overridePathCheck=true
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.8-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
-android.overridePathCheck=true
