--- a/filemanager-0.5/build.gradle
+++ b/filemanager-0.5/build.gradle
@@ -8,6 +8,7 @@
 //reset_test
 //=======
 //>>>>>>> parent of 00b8d19 (reset_1)
+//cherry2
 buildscript {
     repositories {
         //mavenCentral()
